# serializer version: 1
# name: test_from_ics[attendee]
  list([
    ParsedProperty(name='begin', value='VEVENT', params=None),
    ParsedProperty(name='attendee', value='mailto: jsmith@example.com', params=[ParsedPropertyParameter(name='RSVP', values=['TRUE']), ParsedPropertyParameter(name='ROLE', values=['REQ-PARTICIPANT'])]),
    ParsedProperty(name='attendee', value='mailto:jsmith@example.com', params=[ParsedPropertyParameter(name='DELEGATED-TO', values=['mailto:jdoe@example.com', 'mailto:jqpublic @example.com'])]),
    ParsedProperty(name='end', value='VEVENT', params=None),
  ])
# ---
# name: test_from_ics[comma]
  list([
    ParsedProperty(name='begin', value='VEVENT', params=None),
    ParsedProperty(name='description', value="The Fall'98 Wild Wizards Conference - - Las Vegas\\, NV\\, USA", params=[ParsedPropertyParameter(name='ALTREP', values=['cid:part1.0001@example.org'])]),
    ParsedProperty(name='end', value='VEVENT', params=None),
  ])
# ---
# name: test_from_ics[emoji]
  list([
    ParsedProperty(name='begin', value='VCALENDAR', params=None),
    ParsedProperty(name='version', value='2.0', params=None),
    ParsedProperty(name='prodid', value='-//hacksw/handcal//NONSGML v1.0//EN', params=None),
    ParsedProperty(name='begin', value='VEVENT', params=None),
    ParsedProperty(name='uid', value='19970610T172345Z-AF23B2@example.com', params=None),
    ParsedProperty(name='dtstamp', value='19970610T172345Z', params=None),
    ParsedProperty(name='dtstart', value='19971225', params=None),
    ParsedProperty(name='dtend', value='19971226', params=None),
    ParsedProperty(name='summary', value='🎄', params=None),
    ParsedProperty(name='end', value='VEVENT', params=None),
    ParsedProperty(name='end', value='VCALENDAR', params=None),
  ])
# ---
# name: test_from_ics[fold]
  list([
    ParsedProperty(name='begin', value='VEVENT', params=None),
    ParsedProperty(name='description', value='This is a lo ng description that exists on a long line.', params=None),
    ParsedProperty(name='end', value='VEVENT', params=None),
  ])
# ---
# name: test_from_ics[icalendar_object]
  list([
    ParsedProperty(name='begin', value='VCALENDAR', params=None),
    ParsedProperty(name='version', value='2.0', params=None),
    ParsedProperty(name='prodid', value='-//hacksw/handcal//NONSGML v1.0//EN', params=None),
    ParsedProperty(name='begin', value='VEVENT', params=None),
    ParsedProperty(name='uid', value='19970610T172345Z-AF23B2@example.com', params=None),
    ParsedProperty(name='dtstamp', value='19970610T172345Z', params=None),
    ParsedProperty(name='dtstart', value='19970714T170000Z', params=None),
    ParsedProperty(name='dtend', value='19970715T040000Z', params=None),
    ParsedProperty(name='summary', value='Bastille Day Party', params=None),
    ParsedProperty(name='end', value='VEVENT', params=None),
    ParsedProperty(name='end', value='VCALENDAR', params=None),
  ])
# ---
# name: test_from_ics[languages]
  list([
    ParsedProperty(name='begin', value='VCALENDAR', params=None),
    ParsedProperty(name='version', value='2.0', params=None),
    ParsedProperty(name='prodid', value='-//hacksw/handcal//NONSGML v1.0//EN', params=None),
    ParsedProperty(name='begin', value='VEVENT', params=None),
    ParsedProperty(name='uid', value='19970610T172345Z-AF23B2@example.com', params=None),
    ParsedProperty(name='dtstamp', value='19970610T172345Z', params=None),
    ParsedProperty(name='dtstart', value='19970714T170000Z', params=None),
    ParsedProperty(name='dtend', value='19970715T040000Z', params=None),
    ParsedProperty(name='summary', value='žmogus', params=None),
    ParsedProperty(name='end', value='VEVENT', params=None),
    ParsedProperty(name='begin', value='VEVENT', params=None),
    ParsedProperty(name='uid', value='19970610T172345Z-AF23B3@example.com', params=None),
    ParsedProperty(name='dtstamp', value='19970610T172345Z', params=None),
    ParsedProperty(name='dtstart', value='19970714T170000Z', params=None),
    ParsedProperty(name='dtend', value='19970715T040000Z', params=None),
    ParsedProperty(name='summary', value='中文', params=None),
    ParsedProperty(name='end', value='VEVENT', params=None),
    ParsedProperty(name='begin', value='VEVENT', params=None),
    ParsedProperty(name='uid', value='19970610T172345Z-AF23B4@example.com', params=None),
    ParsedProperty(name='dtstamp', value='19970610T172345Z', params=None),
    ParsedProperty(name='dtstart', value='19970714T170000Z', params=None),
    ParsedProperty(name='dtend', value='19970715T040000Z', params=None),
    ParsedProperty(name='summary', value='кириллица', params=None),
    ParsedProperty(name='end', value='VEVENT', params=None),
    ParsedProperty(name='begin', value='VEVENT', params=None),
    ParsedProperty(name='uid', value='19970610T172345Z-AF23B5@example.com', params=None),
    ParsedProperty(name='dtstamp', value='19970610T172345Z', params=None),
    ParsedProperty(name='dtstart', value='19970714T170000Z', params=None),
    ParsedProperty(name='dtend', value='19970715T040000Z', params=None),
    ParsedProperty(name='summary', value='Ελληνικά', params=None),
    ParsedProperty(name='end', value='VEVENT', params=None),
    ParsedProperty(name='begin', value='VEVENT', params=None),
    ParsedProperty(name='uid', value='19970610T172345Z-AF23B6@example.com', params=None),
    ParsedProperty(name='dtstamp', value='19970610T172345Z', params=None),
    ParsedProperty(name='dtstart', value='19970714T170000Z', params=None),
    ParsedProperty(name='dtend', value='19970715T040000Z', params=None),
    ParsedProperty(name='summary', value='עִברִית', params=None),
    ParsedProperty(name='end', value='VEVENT', params=None),
    ParsedProperty(name='begin', value='VEVENT', params=None),
    ParsedProperty(name='uid', value='19970610T172345Z-AF23B7@example.com', params=None),
    ParsedProperty(name='dtstamp', value='19970610T172345Z', params=None),
    ParsedProperty(name='dtstart', value='19970714T170000Z', params=None),
    ParsedProperty(name='dtend', value='19970715T040000Z', params=None),
    ParsedProperty(name='summary', value='日本語', params=None),
    ParsedProperty(name='end', value='VEVENT', params=None),
    ParsedProperty(name='begin', value='VEVENT', params=None),
    ParsedProperty(name='uid', value='19970610T172345Z-AF23B8@example.com', params=None),
    ParsedProperty(name='dtstamp', value='19970610T172345Z', params=None),
    ParsedProperty(name='dtstart', value='19970714T170000Z', params=None),
    ParsedProperty(name='dtend', value='19970715T040000Z', params=None),
    ParsedProperty(name='summary', value='한국어', params=None),
    ParsedProperty(name='end', value='VEVENT', params=None),
    ParsedProperty(name='begin', value='VEVENT', params=None),
    ParsedProperty(name='uid', value='19970610T172345Z-AF23B9@example.com', params=None),
    ParsedProperty(name='dtstamp', value='19970610T172345Z', params=None),
    ParsedProperty(name='dtstart', value='19970714T170000Z', params=None),
    ParsedProperty(name='dtend', value='19970715T040000Z', params=None),
    ParsedProperty(name='summary', value='ไทย', params=None),
    ParsedProperty(name='end', value='VEVENT', params=None),
    ParsedProperty(name='begin', value='VEVENT', params=None),
    ParsedProperty(name='uid', value='19970610T172345Z-AF23B10@example.com', params=None),
    ParsedProperty(name='dtstamp', value='19970610T172345Z', params=None),
    ParsedProperty(name='dtstart', value='19970714T170000Z', params=None),
    ParsedProperty(name='dtend', value='19970715T040000Z', params=None),
    ParsedProperty(name='summary', value='देवनागरी', params=None),
    ParsedProperty(name='end', value='VEVENT', params=None),
    ParsedProperty(name='end', value='VCALENDAR', params=None),
  ])
# ---
# name: test_from_ics[params]
  list([
    ParsedProperty(name='begin', value='VCALENDAR', params=None),
    ParsedProperty(name='name', value='VALUE', params=[ParsedPropertyParameter(name='PARAM-NAME', values=['PARAM-VALUE1'])]),
    ParsedProperty(name='name', value='VALUE', params=[ParsedPropertyParameter(name='PARAM-NAME', values=['PARAM+VALUE2'])]),
    ParsedProperty(name='name', value='VALUE', params=[ParsedPropertyParameter(name='PARAM-NAME', values=['PARAM VALUE3'])]),
    ParsedProperty(name='name', value='VALUE', params=[ParsedPropertyParameter(name='PARAM-NAME', values=['PARAM:VALUE4'])]),
    ParsedProperty(name='description', value='', params=None),
    ParsedProperty(name='description', value='', params=[ParsedPropertyParameter(name='TYPE', values=[''])]),
    ParsedProperty(name='end', value='VCALENDAR', params=None),
  ])
# ---
# name: test_from_ics[params_empty]
  list([
    ParsedProperty(name='begin', value='VCALENDAR', params=None),
    ParsedProperty(name='name', value='VALUE', params=[ParsedPropertyParameter(name='PARAM-NAME', values=[''])]),
    ParsedProperty(name='name', value='VALUE', params=[ParsedPropertyParameter(name='PARAM-NAME', values=['', 'Value2', '', 'VALUE4', 'VALUE5'])]),
    ParsedProperty(name='end', value='VCALENDAR', params=None),
  ])
# ---
# name: test_from_ics[params_quoted]
  list([
    ParsedProperty(name='begin', value='VCALENDAR', params=None),
    ParsedProperty(name='name', value='VALUE', params=[ParsedPropertyParameter(name='PARAM-NAME', values=['PARAM-VALUE'])]),
    ParsedProperty(name='name', value='VALUE', params=[ParsedPropertyParameter(name='PARAM-NAME', values=['PARAM:VALUE'])]),
    ParsedProperty(name='end', value='VCALENDAR', params=None),
  ])
# ---
# name: test_from_ics[params_rfc7986_calendar]
  list([
    ParsedProperty(name='begin', value='VCALENDAR', params=None),
    ParsedProperty(name='name', value='My Calendar', params=[ParsedPropertyParameter(name='LANGUAGE', values=['en'])]),
    ParsedProperty(name='description', value='Description of the calendar', params=[ParsedPropertyParameter(name='LANGUAGE', values=['en'])]),
    ParsedProperty(name='uid', value='calendar-unique-id-123', params=None),
    ParsedProperty(name='last-modified', value='20260708T144000Z', params=None),
    ParsedProperty(name='url', value='http://example.com/calendar.ics', params=None),
    ParsedProperty(name='categories', value='WORK,PROJECT', params=None),
    ParsedProperty(name='refresh-interval', value='PT1H', params=[ParsedPropertyParameter(name='VALUE', values=['DURATION'])]),
    ParsedProperty(name='source', value='http://example.com/source.ics', params=[ParsedPropertyParameter(name='VALUE', values=['URI'])]),
    ParsedProperty(name='color', value='turquoise', params=None),
    ParsedProperty(name='image', value='http://example.com/badge.png', params=[ParsedPropertyParameter(name='DISPLAY', values=['BADGE']), ParsedPropertyParameter(name='FMTTYPE', values=['image/png'])]),
    ParsedProperty(name='image', value='aGVsbG8=', params=[ParsedPropertyParameter(name='VALUE', values=['BINARY']), ParsedPropertyParameter(name='ENCODING', values=['BASE64']), ParsedPropertyParameter(name='FMTTYPE', values=['image/png'])]),
    ParsedProperty(name='end', value='VCALENDAR', params=None),
  ])
# ---
# name: test_from_ics[params_rfc7986_component]
  list([
    ParsedProperty(name='begin', value='VCALENDAR', params=None),
    ParsedProperty(name='begin', value='VEVENT', params=None),
    ParsedProperty(name='uid', value='event-1', params=None),
    ParsedProperty(name='dtstart', value='20260708T150000Z', params=None),
    ParsedProperty(name='dtend', value='20260708T160000Z', params=None),
    ParsedProperty(name='color', value='blue', params=None),
    ParsedProperty(name='image', value='http://example.com/event.jpg', params=[ParsedPropertyParameter(name='DISPLAY', values=['THUMBNAIL']), ParsedPropertyParameter(name='FMTTYPE', values=['image/jpeg'])]),
    ParsedProperty(name='conference', value='https://zoom.us/j/123456', params=[ParsedPropertyParameter(name='FEATURE', values=['AUDIO', 'VIDEO']), ParsedPropertyParameter(name='LABEL', values=['Zoom Meeting'])]),
    ParsedProperty(name='end', value='VEVENT', params=None),
    ParsedProperty(name='begin', value='VTODO', params=None),
    ParsedProperty(name='uid', value='todo-1', params=None),
    ParsedProperty(name='dtstart', value='20260708T150000Z', params=None),
    ParsedProperty(name='color', value='red', params=None),
    ParsedProperty(name='image', value='http://example.com/todo.jpg', params=[ParsedPropertyParameter(name='DISPLAY', values=['FULLSIZE'])]),
    ParsedProperty(name='conference', value='https://slack.com/123', params=[ParsedPropertyParameter(name='FEATURE', values=['CHAT']), ParsedPropertyParameter(name='LABEL', values=['Slack Channel'])]),
    ParsedProperty(name='end', value='VTODO', params=None),
    ParsedProperty(name='begin', value='VJOURNAL', params=None),
    ParsedProperty(name='uid', value='journal-1', params=None),
    ParsedProperty(name='dtstart', value='20260708T150000Z', params=None),
    ParsedProperty(name='color', value='green', params=None),
    ParsedProperty(name='image', value='http://example.com/journal.jpg', params=[ParsedPropertyParameter(name='DISPLAY', values=['BADGE'])]),
    ParsedProperty(name='end', value='VJOURNAL', params=None),
    ParsedProperty(name='end', value='VCALENDAR', params=None),
  ])
# ---
# name: test_from_ics[rdate]
  list([
    ParsedProperty(name='begin', value='VCALENDAR', params=None),
    ParsedProperty(name='rdate', value='19970304,19970504,19970704,19970904', params=[ParsedPropertyParameter(name='VALUE', values=['DATE'])]),
    ParsedProperty(name='end', value='VCALENDAR', params=None),
  ])
# ---
# name: test_from_ics[unicode]
  list([
    ParsedProperty(name='begin', value='VCALENDAR', params=None),
    ParsedProperty(name='prodid', value='-//ABC Corporation//NONSGML My Product//EN', params=None),
    ParsedProperty(name='version', value='2.0', params=None),
    ParsedProperty(name='begin', value='VTODO', params=None),
    ParsedProperty(name='dtstamp', value='19980130T134500Z', params=None),
    ParsedProperty(name='sequence', value='2', params=None),
    ParsedProperty(name='uid', value='uid4@example.com', params=None),
    ParsedProperty(name='due', value='19980415T000000', params=None),
    ParsedProperty(name='status', value='NEEDS-ACTION', params=None),
    ParsedProperty(name='summary', value='Birthday', params=None),
    ParsedProperty(name='begin', value='VALARM', params=None),
    ParsedProperty(name='action', value='AUDIO', params=None),
    ParsedProperty(name='trigger', value='19980403T120000Z', params=None),
    ParsedProperty(name='attach', value='https://someurl.com', params=[ParsedPropertyParameter(name='FILENAME', values=['Fødselsdag_40.pdf'])]),
    ParsedProperty(name='repeat', value='4', params=None),
    ParsedProperty(name='duration', value='PT1H', params=None),
    ParsedProperty(name='end', value='VALARM', params=None),
    ParsedProperty(name='end', value='VTODO', params=None),
    ParsedProperty(name='end', value='VCALENDAR', params=None),
  ])
# ---
# name: test_from_ics[vcalendar_emoji]
  list([
    ParsedProperty(name='begin', value='VEVENT', params=None),
    ParsedProperty(name='dtstamp', value='20221202T075310', params=None),
    ParsedProperty(name='uid', value='5deea302-7216-11ed-b1b6-48d2240d04ae', params=None),
    ParsedProperty(name='dtstart', value='20221202T085500', params=None),
    ParsedProperty(name='dtend', value='20221202T090000', params=None),
    ParsedProperty(name='summary', value='🎄emojis!', params=None),
    ParsedProperty(name='created', value='20221202T075310', params=None),
    ParsedProperty(name='sequence', value='0', params=None),
    ParsedProperty(name='end', value='VEVENT', params=None),
  ])
# ---
# name: test_from_ics[vevent]
  list([
    ParsedProperty(name='begin', value='VEVENT', params=None),
    ParsedProperty(name='uid', value='19970901T130000Z-123401@example.com', params=None),
    ParsedProperty(name='dtstamp', value='19970901T130000Z', params=None),
    ParsedProperty(name='dtstart', value='19970903T163000Z', params=None),
    ParsedProperty(name='dtend', value='19970903T190000Z', params=None),
    ParsedProperty(name='summary', value='Annual Employee Review', params=None),
    ParsedProperty(name='class', value='PRIVATE', params=None),
    ParsedProperty(name='categories', value='BUSINESS,HUMAN RESOURCES', params=None),
    ParsedProperty(name='end', value='VEVENT', params=None),
  ])
# ---
# name: test_from_ics[vtodo]
  list([
    ParsedProperty(name='begin', value='VTODO', params=None),
    ParsedProperty(name='uid', value='20070313T123432Z-456553@example.com', params=None),
    ParsedProperty(name='dtstamp', value='20070313T123432Z', params=None),
    ParsedProperty(name='due', value='20070501', params=[ParsedPropertyParameter(name='VALUE', values=['DATE'])]),
    ParsedProperty(name='summary', value='Submit Quebec Income Tax Return for 2006', params=None),
    ParsedProperty(name='class', value='CONFIDENTIAL', params=None),
    ParsedProperty(name='categories', value='FAMILY,FINANCE', params=None),
    ParsedProperty(name='status', value='NEEDS-ACTION', params=None),
    ParsedProperty(name='end', value='VTODO', params=None),
  ])
# ---
# name: test_from_ics[x-name]
  list([
    ParsedProperty(name='begin', value='VEVENT', params=None),
    ParsedProperty(name='x-description', value='This is a description', params=None),
    ParsedProperty(name='x-ical-description', value='This is a description', params=None),
    ParsedProperty(name='x-ical-1', value='This is another x-name', params=None),
    ParsedProperty(name='end', value='VEVENT', params=None),
  ])
# ---
